# smartenergy.awattar-api

./: .env_example  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/issue_template/: bug_report.md
.github/workflows/: python-ci.yml  python-publish.yml
electricity_maps_api/: __init__.py  electricity_maps_api.py  validations.py
examples/: simple.py
green_energy_api/: green_energy_api.py  resp.json
tests/: test_electricity_maps_api.py  test_green_energy_api.py  test_validations.py
